--- a/Dices/app/src/main/res/values/strings.xml
+++ b/Dices/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="d20">d20</string>
     <string name="d6">d6</string>
     <string name="d12">d12</string>
+    <string name="rolar">Rolar</string>
+    <string name="voltar">Voltar</string>
+    <string name="dices_rolls">DICES ROLLS</string>
 </resources>
