--- a/ToDo/app/src/main/res/values/strings.xml
+++ b/ToDo/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">RecycleView</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">Todo</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="floatingActionButton">Adicionar Nova Tarefa</string>
+    <string name="Spinner">Categoria</string>
     <string name="data">Data</string>
     <string name="textview">TextView</string>
     <string name="deletar">Deletar</string>
+    <string name="salvar">Salvar</string>
 </resources>
